--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ body {
 /*sets the "seo" part of the title to a different colour - could change colour to distinguish this more */
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #7a7a7a;
 }
 
 /* creates navigation bar on the right */
